k8s/network_abstraction/ingress_services/loadbalancer.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-lb
spec:
  ports:
    - port: 8080
      targetPort: 80
  selector:
    app: nginx
  type: LoadBalancer
