k8s/network_abstraction/ingress_services/nodeport.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-np
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx
  type: NodePort
